--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "tailwindcss": "^3.0.23",
     "webpack-dev-server": "^3"
   }
